tests/lean/autoBoundImplicits1.lean.expected.out
myid 10 : Nat
myid true : Bool
autoBoundImplicits1.lean:17:18-17:23: warning: declaration uses 'sorry'
autoBoundImplicits1.lean:20:25-20:29: error: unknown identifier 'size'
autoBoundImplicits1.lean:21:18-21:23: warning: declaration uses 'sorry'
autoBoundImplicits1.lean:24:23-24:24: error: unknown identifier 'α'
autoBoundImplicits1.lean:24:25-24:26: error: unknown identifier 'n'
autoBoundImplicits1.lean:24:33-24:34: error: unknown identifier 'α'
autoBoundImplicits1.lean:24:37-24:38: error: unknown identifier 'β'
autoBoundImplicits1.lean:24:46-24:47: error: unknown identifier 'β'
autoBoundImplicits1.lean:24:48-24:49: error: unknown identifier 'n'
autoBoundImplicits1.lean:25:18-25:23: warning: declaration uses 'sorry'
f : {α_1 : Type} → {n_1 : Nat} → Vec α_1 n_1 → Vec α_1 n_1
f mkVec : Vec ?m 0
f mkVec : Vec Nat 0
